@@ -3,6 +3,7 @@ glibc (2.31-0experimental3) UNRELEASED; urgency=medium
   * debian/control: Build-depend on gcc-10 version that defaults to i686 on
     hurd-i386.
   * debian/sysdeps/hurd-i386.mk: Drop adding -march=i686.
+  * debian/testsuite-xfail-debian.mk: Update for 2.32.
 
  -- Samuel Thibault <sthibault@debian.org>  Tue, 26 May 2020 10:33:13 +0200
 
